[package]
name = "lp_tetris"
version = "0.1.3"
authors = ["Ezra Barrow <barrow@tilde.team>"]
edition = "2018"
license = "GPL-2.0-only"
description = "A tetris clone running on a Novation Launchpad Mk2 MIDI controller"
repository = "https://tildegit.org/barrow/lp_tetris_rs"
readme = "README.md"

[dependencies]
midir = "0.5.0"
array2d = "0.2.1"
multiinput = "0.0.15"
rand = "0.6.0"