[package]
name = "lp_tetris"
version = "0.1.5"
authors = ["Ezra Barrow <barrow@tilde.team>"]
edition = "2018"
license-file = "LICENSE"
description = "A tetris clone running on a Novation Launchpad Mk2 MIDI controller"
repository = "https://github.com/BobbyBobson4888/lp_tetris"
readme = "README.md"

[dependencies]
midir = "0.5.0"
array2d = "0.2.1"
multiinput = "0.0.15"
rand = "0.6.0"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
